app.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: foo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foo-v1
  namespace: foo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: foo
      version: v1
  template:
    metadata:
      labels:
        app: foo
        version: v1
    spec:
      containers:
      - name: whereami
        image: gcr.io/google-samples/whereami:v1.2.1
        ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: foo-v1
  namespace: foo
spec:
  selector:
    app: foo
    version: v1
  ports:
  - port: 8080
    targetPort: 8080
