httproute.yaml
kind: HTTPRoute
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: foo
  namespace: foo
  labels:
    gateway: multi-cluster-gateway-ilb
spec:
  rules:
  - forwardTo:
    - backendRef: 
        group: net.gke.io
        kind: ServiceImport
        name: foo-v1
      port: 8080
      weight: 80
    - backendRef: 
        group: net.gke.io
        kind: ServiceImport
        name: foo-v2
      port: 8080
      weight: 20
